Fix context-menu styling & minor style adjustments